--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -442,8 +442,9 @@
   <link rel="stylesheet" type ="text/css" href="{%static 'css/styles.css'%}"/>
 </head>
 <body>
+    <img class= "image_login" src="{%static 'img/fondos/registro.webp' %}" alt="Enarm 365 Logo">
      <form>
-        <p>Welcome, new user. Please:</p>
+        <p class="text_login">Welcome, new user. Please:</p>
         <p> <a href="{% url 'login' %}">Login</a>  </p>
         <p> <a href="{% url 'register' %}">Register</a> </p>
     </form>
