--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -72,7 +72,7 @@
             <p class="lead measure-hero-lead mx-auto text-white text-shadow mb-48pt">Practica todos los dias, en todo
                 momento, en todos lados.</p>
 
-            <a href="courses.html" class="btn btn-lg btn-white btn--raised mb-16pt">Iniciar Practica Diaria</a>
+            <a href="" class="btn btn-lg btn-white btn--raised mb-16pt">Iniciar Practica Diaria</a>
             <!-- Para Mover el color hay que modificar la clase btn-white -->
 
             <p class="mb-0"><a href="" class="text-white text-shadow"><strong>Dudas?</strong></a></p>
@@ -219,7 +219,7 @@
                                 class="avatar-img rounded"></a>
                     </div>
                     <div class="posts-card__title flex d-flex flex-column">
-                        <a href="blog-post.html" class="card-title mr-3">Simulador ENARM</a>
+                        <a href="{% url 'mostrar_enarm' %}" class="card-title mr-3">Simulador ENARM</a>
                         <small class="text-50">Practica todo el examen.</small>
                     </div>
                     <div class="d-flex align-items-center flex-column flex-sm-row posts-card__meta">
@@ -293,10 +293,10 @@
                     <div class="card-body flex">
                         <div class="d-flex">
                             <div class="flex">
-                                <a class="card-title" href="student-course.html">Simulador ENARM</a>
+                                <a class="card-title" href="{% url 'mostrar_enarm' %}">Simulador ENARM</a>
                                 <small class="text-50 font-weight-bold mb-4pt">Suscripción Pro</small>
                             </div>
-                            <a href="student-course.html" data-toggle="tooltip" data-title="Add Favorite"
+                            <a href="" data-toggle="tooltip" data-title="Add Favorite"
                                 data-placement="top" data-boundary="window"
                                 class="ml-4pt material-icons text-20 card-course__icon-favorite">favorite_border</a>
                         </div>
