--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -177,7 +177,7 @@
                     </form>
                 </div>
 
-                <a href=""class="sidebar-brand ">
+                <a href="{% url 'mostrar_enarm' %}"class="sidebar-brand ">
                     <span class="avatar avatar-xl sidebar-brand-icon h-auto">
                         <span class="avatar-title rounded bg-primary"><img src="{% static 'img/LogoGeneralSinFondo.png'%}"
                          class="img-fluid"alt="logo" /></span>
