--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -35,13 +35,13 @@
         </div>
     </li>
     <li class="nav-item">
-        <a href="pricing.html"
+        <a href=""
            class="nav-link">Pricing</a>
     </li>
     
 <ul class="nav navbar-nav ml-auto mr-0">
     <li class="nav-item">
-        <a href="login.html"
+        <a href=""
            class="nav-link"
            data-toggle="tooltip"
            data-title="Login"
@@ -145,7 +145,7 @@
                         </div>
                         <div class="posts-card-popular__title card-body">
                             <small class="text-muted text-uppercase">Ansiedad</small>
-                            <a class="card-title" href="blog-post.html">Como manejar la ansiedad ante el examen?</a>
+                            <a class="card-title" href="">Como manejar la ansiedad ante el examen?</a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                         </div>
                         <div class="posts-card-popular__title card-body">
                             <small class="text-muted text-uppercase">Preparacion</small>
-                            <a class="card-title" href="blog-post.html">Como estudio todos los dias?</a>
+                            <a class="card-title" href="">Como estudio todos los dias?</a>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                         </div>
                         <div class="posts-card-popular__title card-body">
                             <small class="text-muted text-uppercase">Motivacion</small>
-                            <a class="card-title" href="blog-post.html">Como mantenerme motivado?</a>
+                            <a class="card-title" href="">Como mantenerme motivado?</a>
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
             <div class="card posts-card mb-0">
                 <div class="posts-card__content d-flex align-items-center flex-wrap">
                     <div class="avatar avatar-lg mr-3">
-                        <a href="blog-post.html"><img src="{% static 'img/LogoGeneralSinFondo.png' %}" alt="avatar"
+                        <a href="{% url 'mostrar_enarm' %}"><img src="{% static 'img/LogoGeneralSinFondo.png' %}" alt="avatar"
                                 class="avatar-img rounded"></a>
                     </div>
                     <div class="posts-card__title flex d-flex flex-column">
@@ -280,7 +280,7 @@
                 <div class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
                     data-toggle="popover" data-trigger="click">
 
-                    <a href="student-course.html" class="card-img-top js-image" data-position="" data-height="140">
+                    <a href="" class="card-img-top js-image" data-position="" data-height="140">
                         <img src="{% static 'img/fondos/passforgot.webp' %}" alt="course">
                         <span class="overlay__content">
                             <span class="overlay__action d-flex flex-column text-center">
@@ -393,7 +393,7 @@
                 <div class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
                     data-toggle="popover" data-trigger="click">
 
-                    <a href="student-course.html" class="card-img-top js-image" data-position="" data-height="140">
+                    <a href="" class="card-img-top js-image" data-position="" data-height="140">
                         <img src="{% static 'img/fondos/registro.webp' %} " alt="course">
                         <span class="overlay__content">
                             <span class="overlay__action d-flex flex-column text-center">
@@ -406,10 +406,10 @@
                     <div class="card-body flex">
                         <div class="d-flex">
                             <div class="flex">
-                                <a class="card-title" href="student-course.html">Simulador Personalizado</a>
+                                <a class="card-title" href="">Simulador Personalizado</a>
                                 <small class="text-50 font-weight-bold mb-4pt">Suscripción Pro</small>
                             </div>
-                            <a href="student-course.html" data-toggle="tooltip" data-title="Add Favorite"
+                            <a href="" data-toggle="tooltip" data-title="Add Favorite"
                                 data-placement="top" data-boundary="window"
                                 class="ml-4pt material-icons text-20 card-course__icon-favorite">favorite_border</a>
                         </div>
@@ -524,10 +524,10 @@
                     <div class="card-body flex">
                         <div class="d-flex">
                             <div class="flex">
-                                <a class="card-title" href="student-course.html">Simulador Diagnóstico</a>
+                                <a class="card-title" href="">Simulador Diagnóstico</a>
                                 <small class="text-50 font-weight-bold mb-4pt">Suscripción Pro</small>
                             </div>
-                            <a href="student-course.html" data-toggle="tooltip" data-title="Add Favorite"
+                            <a href="" data-toggle="tooltip" data-title="Add Favorite"
                                 data-placement="top" data-boundary="window"
                                 class="ml-4pt material-icons text-20 card-course__icon-favorite">favorite_border</a>
                         </div>
@@ -625,7 +625,7 @@
                 <div class="card card-sm card--elevated p-relative o-hidden overlay overlay--primary-dodger-blue js-overlay card-group-row__card"
                     data-toggle="popover" data-trigger="click">
 
-                    <a href="student-course.html" class="card-img-top js-image" data-position="" data-height="140">
+                    <a href="" class="card-img-top js-image" data-position="" data-height="140">
                         <img src="{% static 'img/fondos/forgotpassword.webp' %} " alt="course">
                         <span class="overlay__content">
                             <span class="overlay__action d-flex flex-column text-center">
@@ -765,13 +765,13 @@
                         </div>
                         <div class="media ml-12pt">
                             <div class="media-left mr-12pt">
-                                <a href="student-profile.html" class="avatar avatar-sm">
+                                <a href="" class="avatar avatar-sm">
                                     <!-- <img src="../../public/images/people/110/guy-.jpg" width="40" alt="avatar" class="rounded-circle"> -->
                                     <span class="avatar-title rounded-circle material-icons">account_box</span>
                                 </a>
                             </div>
                             <div class="media-body media-middle">
-                                <a href="student-profile.html" class="card-title">{{comentario.fk_User.first_name}}</a>
+                                <a href="" class="card-title">{{comentario.fk_User.first_name}}</a>
                                 <div class="rating mt-4pt">
                                     {% if comentario.valorMensaje == 1%}
                                     <span class="rating__item"><span class="material-icons">star</span></span>
