--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -358,23 +358,24 @@
 </html>
 {% else %}
 
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>{%block title%} ENARM 365 {% endblock%}</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>{% block title %}ENARM 365{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="" />
   <link rel="icon" href="favicon.png">
-  <link rel="stylesheet" type ="text/css" href="{%static 'css/styles.css'%}"/>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}"/>
 </head>
-<body>
-    <img class= "image_login" src="{%static 'img/fondos/registro.webp' %}" alt="Enarm 365 Logo">
-     <form>
-        <p class="text_login">Welcome, new user. Please:</p>
-        <p> <a href="{% url 'login' %}">Login</a>  </p>
-        <p> <a href="{% url 'register' %}">Register</a> </p>
+<body class="custom-background">
+  <div class="overlay">
+    <form class="login_form">
+      <p class="text_login">Welcome, new user. Please:</p>
+      <p class="text_login"><a href="{% url 'login' %}">Login</a></p>
+      <p class="text_login"><a href="{% url 'register' %}">Register</a></p>
     </form>
+  </div>
 </body>
 </html>
  
