--- a/api/templates/registration/login.html
+++ b/api/templates/registration/login.html
@@ -5,14 +5,16 @@
 
 
 {%block content%}
-<div class = "logincontainer"> 
-    <img class= "logologin" src="{%static 'img/HorizontalUnaTinta.png' %}" alt="Enarm 365 Logo">
-   <form method="post" action="{%url 'login'%}" class="login">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit">Login</button>
-    <a href="{% url 'password_reset' %}">Forgot Password?</a>
-    <a href="{% url 'register' %}">Register</a>
-   </form>
-</div>
+<body class="backlogin">
+    <div class = "logincontainer"> 
+        <img class= "logologin" src="{%static 'img/HorizontalUnaTinta.png' %}" alt="Enarm 365 Logo">
+       <form method="post" action="{%url 'login'%}" class="login">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit">Login</button>
+        <a href="{% url 'password_reset' %}">Forgot Password?</a>
+        <a href="{% url 'register' %}">Register</a>
+       </form>
+    </div>
+</body>
 {%endblock%}
