--- a/api/templates/registration/register.html
+++ b/api/templates/registration/register.html
@@ -5,6 +5,9 @@
 
 
 {%block content%}
+<body class="backregister">
+   
+
 <div class = "logincontainer"> 
    <form method="post" action="{%url 'register' %}" class="login">
     {% csrf_token %}
@@ -13,4 +16,5 @@
     <a href="{% url 'password_reset' %}">Already have an account?</a>
    </form>
 </div>
+</body>
 {%endblock%}
