--- a/api/templates/forocomentarios.html
+++ b/api/templates/forocomentarios.html
@@ -25,7 +25,7 @@
         </div>
     </li>
     <li class="nav-item">
-        <a href="pricing.html" class="nav-link">Pricing</a>
+        <a href="{% url 'pricing' %}" class="nav-link">Pricing</a>
     </li>
 
     <ul class="nav navbar-nav ml-auto mr-0">
