--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -249,7 +249,7 @@
                             id="account_menu">
                             <li class="sidebar-menu-item">
                                 <a class="sidebar-menu-button"
-                                   href="">
+                                href="{% url 'pricing' %}">
                                     <span class="sidebar-menu-text">Pricing</span>
                                 </a>
                             </li>
