--- a/api/templates/Simulator/panel_personalizado.html
+++ b/api/templates/Simulator/panel_personalizado.html
@@ -35,7 +35,7 @@
         </div>
     </li>
     <li class="nav-item">
-        <a href="pricing.html"
+        <a href="{% url 'pricing' %}"
            class="nav-link">Pricing</a>
     </li>
     
