--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -35,7 +35,7 @@
         </div>
     </li>
     <li class="nav-item">
-        <a href=""
+        <a href="{% url 'pricing' %}"
            class="nav-link">Pricing</a>
     </li>
     
