--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -167,7 +167,7 @@
                         <!-- Sidebar Content -->
 
                    <div class="d-flex align-items-center navbar-height">
-                    <form action="index.html"
+                    <form
                           class="search-form search-form--black mx-16pt pr-0 pl-16pt">
                         <input type="text"
                                class="form-control pl-0"
@@ -268,28 +268,6 @@
                                 </a>
                             </li>
                             
-                            
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button"
-                                   href="">
-                                    <span class="sidebar-menu-text">Payment Information</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button"
-                                   href="">
-                                    <span class="sidebar-menu-text">Payment History</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button"
-                                   href="">
-                                    <span class="sidebar-menu-text">Invoice</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
                            data-toggle="collapse"
