--- a/api/templates/Simulator/panel_personalizado.html
+++ b/api/templates/Simulator/panel_personalizado.html
@@ -79,13 +79,13 @@
                                 <input type="hidden" name="id_tema" value="{{nombre_tema.idTemarios}}">
                                 <div class="form-group">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="tiempo" id="tiempoCorto" value="1">
+                                        <input class="form-check-input" type="radio" name="tiempo" id="tiempoCorto" value="1" required>
                                         <label class="form-check-label" for="tiempoCorto">
                                             Tiempo Corto
                                         </label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="tiempo" id="tiempoExtendido" value="2">
+                                        <input class="form-check-input" type="radio" name="tiempo" id="tiempoExtendido" value="2" required>
                                         <label class="form-check-label" for="tiempoExtendido">
                                             Tiempo Extendido
                                         </label>
@@ -94,7 +94,7 @@
                                 <div class="form-group text-center">
                                     <label for="numero">Selecciona o ingresa el número de preguntas</label>
                                     <div class="mx-auto" style="width: fit-content;">
-                                    <input type="number" class="form-control" name="numero" id="numero" placeholder="Cantidad" max="100" min="10">
+                                    <input type="number" class="form-control" name="numero" id="numero" placeholder="Cantidad" max="100" min="10" required>
                                     </div>
                                 </div>
                                 <div class="form-group text-center">
