--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -267,6 +267,12 @@
                                     <span class="sidebar-menu-text">Edit Account</span>
                                 </a>
                             </li>
+                            <li class="sidebar-menu-item">
+                                <a class="sidebar-menu-button"
+                                   href="{% url 'logout' %}">
+                                    <span class="sidebar-menu-text">Logout</span>
+                                </a>
+                            </li>
                             
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
