--- a/api/templates/Estadisticos/resultados.html
+++ b/api/templates/Estadisticos/resultados.html
@@ -36,7 +36,7 @@
         </div>
     </li>
     <li class="nav-item">
-        <a href="pricing.html"
+        <a href="{% url 'pricing' %}"
            class="nav-link">Pricing</a>
     </li>
     
