--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -214,7 +214,14 @@
                         <a class="sidebar-menu-button"
                            href="{% url 'foro_comentarios' %}">
                             <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">comment</span>
-                            <span class="sidebar-menu-text">Foro de Comentarios</span>
+                            <span class="sidebar-menu-text">Comentarios</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-menu-item">
+                        <a class="sidebar-menu-button"
+                           href="{% url 'blog' %}">
+                            <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">people_outline</span>
+                            <span class="sidebar-menu-text">Foro Q&A</span>
                         </a>
                     </li>
                     <li class="sidebar-menu-item">
@@ -277,26 +284,7 @@
                             </li>
                             
                             
-                    <li class="sidebar-menu-item">
-                        <a class="sidebar-menu-button"
-                           data-toggle="collapse"
-                           href="#community_menu">
-                            <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">people_outline</span>
-                            Comunidad
-                            <span class="ml-auto sidebar-menu-toggle-icon"></span>
-                        </a>
-                        <ul class="sidebar-submenu collapse sm-indent"
-                            id="community_menu">
-                            
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button"
-                                   href="blog-post.html">
-
-                                    <span class="sidebar-menu-text">Blog</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
+                   
                 </ul>
 
                 
