--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -173,7 +173,7 @@
                                class="form-control pl-0"
                                placeholder="Search">
                         <button class="btn"
-                                type="submit"><i class="material-icons">search</i></button>
+                                type=""><i class="material-icons">search</i></button>
                     </form>
                 </div>
 
