--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -242,6 +242,13 @@
                             <span class="sidebar-menu-text">Dashboard</span>
                         </a>
                     </li>
+                    <li class="sidebar-menu-item">
+                        <a class="sidebar-menu-button"
+                           href="{% url 'resultados' %}">
+                            <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">pie_chart</span>
+                            <span class="sidebar-menu-text">Resultados</span>
+                        </a>
+                    </li>
             
 
                 </ul>
