--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -167,14 +167,14 @@
                         <!-- Sidebar Content -->
 
                    <div class="d-flex align-items-center navbar-height">
-                    <form
+                    <div
                           class="search-form search-form--black mx-16pt pr-0 pl-16pt">
                         <input type="text"
                                class="form-control pl-0"
                                placeholder="Search">
                         <button class="btn"
                                 type=""><i class="material-icons">search</i></button>
-                    </form>
+                    </div>
                 </div>
 
                 <a href="{% url 'mostrar_enarm' %}"class="sidebar-brand ">
