Cambios completos Finales Enarm

--- a/api/templates/Simulator/panel_personalizado.html
+++ b/api/templates/Simulator/panel_personalizado.html
@@ -94,7 +94,7 @@
                                 <div class="form-group text-center">
                                     <label for="numero">Selecciona o ingresa el número de preguntas</label>
                                     <div class="mx-auto" style="width: fit-content;">
-                                    <input type="number" class="form-control" name="numero" id="numero" placeholder="Cantidad" max="100" min="10" required>
+                                    <input type="number" class="form-control" name="numero" value="10" id="numero" placeholder="Cantidad" max="100" min="10" required>
                                     </div>
                                 </div>
                                 <div class="form-group text-center">
