--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -878,7 +878,7 @@
                 .then((goToExam) => {
                     if (goToExam) {
                         // Redirigir al usuario al examen diagnóstico
-                        window.location.href = "//"; // Cambia esto por la URL real del examen diagnóstico
+                        window.location.href = "/simulador_diagnostico/"; // Cambia esto por la URL real del examen diagnóstico
                     }
                 });
             }
