--- a/api/templates/pricing.html
+++ b/api/templates/pricing.html
@@ -83,7 +83,7 @@
                 <p class="lh-1 text-muted mb-0"><small>Unete a la comunidad Enarm 365</small></p>
             </div>
             <div class="card-footer">
-                <a href=""
+                <a href="{% url 'paypal' %}"
                    class="btn btn-accent">Suscribirme</a>
             </div>
         </div>
@@ -115,7 +115,7 @@
                 <p class="lh-1 text-muted mb-0"><small>Unete a la comunidad Enarm 365</small></p>
             </div>
             <div class="card-footer">
-                <a href=""
+                <a href="{% url 'paypalanual' %}"
                    class="btn btn-accent">Suscribirme</a>
             </div>
         </div>
