--- a/api/templates/Simulator/simulator_diagnostico.html
+++ b/api/templates/Simulator/simulator_diagnostico.html
@@ -139,26 +139,25 @@
 <div class="page-section border-bottom-2">
     <div class="container page__container">
         <div class="page-separator">
-            <h5 class="page-separator__text">Conoce tu nivel - Examen Diagnóstico</h5>
+            <h5 class="page-separator__text">Conoce tu nivel - Simulador Diagnóstico</h5>
         </div>
         <label for="">Para las preguntas a continuación, por favor elige la mejor opción para completar</label>
         <div class="posts-cards">
             <div class="card" id="preguntas">
                 <div class="pregunta-actual">
                     {% for pregunta, respuestas_mezcladas in preguntas_con_respuestas_mezcladas %}
-                    <form action="" class="formulario-gratuito pregunta" data-question-id="{{ pregunta.idPregunta }}" id="formulario-{{ pregunta.idPregunta }}">
+                    <form action="" class="formulario-timer pregunta" data-question-id="{{ pregunta.idPregunta }}" id="formulario-{{ pregunta.idPregunta }}">
                         {% csrf_token %}
                         <h5 class="title-question"><i class="material-icons text-muted-light mr-1">help_outline</i>Pregunta: {{ pregunta.nombrePregunta }}</h5>
                         {% for respuesta in respuestas_mezcladas %}
-                            <div class="answer_type" data-radio-id="{{ pregunta.idPregunta }}">
-                                <input type="radio" id="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}" name="respuesta_{{ pregunta.idPregunta }}" value="{{ respuesta.idRespuestas }}">
-                                <label for="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}">{{ respuesta.nombreRespuestas }}</label>
-                            </div>
+                        <div class="answer_type" data-radio-id="{{ pregunta.idPregunta }}">
+                            <input type="radio" id="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}" name="respuesta_{{ pregunta.idPregunta }}" value="{{ respuesta.idRespuestas }}">
+                            <label for="opcion_{{ pregunta.idPregunta }}_{{ respuesta.idRespuestas }}">{{ respuesta.nombreRespuestas }}</label>
+                        </div>
                         {% endfor %}
                         <div class="text-center mb-24pt">
                             <input type="button" class="btn btn-primary btn-lg btn-siguiente" value="Siguiente">
                         </div>
-                        
                     </form>
                     
                     {% endfor %}
@@ -166,8 +165,8 @@
                 <div class="progress-bar-simulator ">
                     <div class="progress-simulator"></div>
                 </div>
-                <p class="mx-16pt" > Total de preguntas ( {{ preguntas_con_respuestas_mezcladas|length }} )</p>
-            </div>
+                <p class="mx-16pt" >Total de Preguntas ( {{ preguntas_con_respuestas_mezcladas|length }} )</p>
+            </div>            
         </div>
     </div>
 </div>
@@ -185,13 +184,15 @@
 {% block js %}
 {% if Intento %}
 <!-- Aquí puedes agregar el atributo data-totalpreguntas a cualquier elemento HTML que desees -->
-<div id="preguntas-data" data-totalpreguntas="{{ preguntas_con_respuestas_mezcladas|length }}">
-    <!-- Contenido de las preguntas -->
-</div>
+<div id="preguntas-data" data-totalpreguntas="{{ preguntas_con_respuestas_mezcladas|length }}"></div>
+
+
 <script src="{% static 'js/simulador-diagnostico.js'%}"></script>
 
-
 {% endif %}
+
+
+
 {% endblock %}
 
 {% endblock%}
